--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -39,6 +39,15 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Choose Picture"
+        android:onClick="choosePicture"
+        android:id="@+id/button4"
+        android:layout_below="@+id/button2"
+        android:layout_alignParentStart="true" />
+
     <TextView
         android:id="@+id/text_freq"
         android:layout_height="31dp"
