--- a/bluetooth/src/main/res/layout/select.xml
+++ b/bluetooth/src/main/res/layout/select.xml
@@ -58,11 +58,12 @@
 
     <Button
         android:id="@+id/select_return"
-        android:layout_width="50dp"
+        android:layout_width="80dp"
         android:layout_height="50dp"
+        android:layout_above="@+id/pull_to_refresh"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:background="@drawable/select_return"
-        android:onClick="select_return" />
+        android:background="@drawable/button_color"
+        android:onClick="select_return"
+        android:text="Return" />
 
 </RelativeLayout>
