--- a/bluetooth/src/main/res/layout/activity_choose_note.xml
+++ b/bluetooth/src/main/res/layout/activity_choose_note.xml
@@ -10,59 +10,82 @@
         android:id="@+id/btn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="C"
+        android:layout_below="@+id/btn5"
+        android:layout_marginEnd="13dp"
+        android:layout_marginTop="81dp"
+        android:layout_toStartOf="@+id/imageView"
         android:onClick="setFreq1"
-        tools:layout_editor_absoluteY="49dp"
-        tools:layout_editor_absoluteX="16dp" />
+        android:text="C"
+        android:background="@drawable/button_color"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="49dp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="140dp"
+        android:layout_height="300dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/ukuleleheadstrings" />
 
     <Button
         android:id="@+id/btn2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="E"
+        android:layout_alignBaseline="@+id/btn1"
+        android:layout_alignBottom="@+id/btn1"
+        android:layout_marginStart="15dp"
+        android:background="@drawable/button_color"
+        android:layout_toEndOf="@+id/imageView"
         android:onClick="setFreq2"
-        tools:layout_editor_absoluteY="97dp"
+        android:text="E"
         tools:layout_editor_absoluteX="16dp"
-        android:layout_below="@+id/btn1"
-        android:layout_alignParentStart="true" />
+        tools:layout_editor_absoluteY="97dp" />
 
     <Button
         android:id="@+id/done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Done"
-        android:onClick="done"
-        tools:layout_editor_absoluteX="290dp"
-        tools:layout_editor_absoluteY="398dp"
+        android:background="@drawable/button_color"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="33dp" />
+        android:onClick="done"
+        android:text="Done"
+        tools:layout_editor_absoluteX="290dp"
+        tools:layout_editor_absoluteY="398dp" />
 
     <Button
         android:id="@+id/btn3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="G"
+        android:background="@drawable/button_color"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/btn1"
+        android:layout_marginTop="65dp"
         android:onClick="setFreq3"
-        android:layout_below="@+id/btn2"
-        android:layout_alignParentStart="true" />
+        android:text="G" />
 
     <Button
         android:id="@+id/btn4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="A"
+        android:background="@drawable/button_color"
+        android:layout_alignBaseline="@+id/btn3"
+        android:layout_alignBottom="@+id/btn3"
+        android:layout_alignParentEnd="true"
         android:onClick="setFreq4"
-        android:layout_below="@+id/btn3"
-        android:layout_alignParentStart="true" />
+        android:text="A" />
+
     <Button
         android:id="@+id/btn5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Random"
+        android:background="@drawable/button_color"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="13dp"
         android:onClick="setFreq5"
-        android:layout_below="@+id/btn4"
-        android:layout_alignParentStart="true" />
+        android:text="Random" />
 
 
 </RelativeLayout>
