--- a/bluetooth/src/main/res/layout/activity_start_page.xml
+++ b/bluetooth/src/main/res/layout/activity_start_page.xml
@@ -5,11 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="elvis.bluetooth.StartPage">
+
     <Button
         android:id="@+id/button"
-        android:layout_width="60dp"
-        android:layout_height="30dp"
-        android:layout_above="@+id/button4"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_above="@+id/button3"
         android:layout_alignParentEnd="true"
         android:background="@drawable/bluetooth"
         android:onClick="connect"
@@ -48,6 +49,15 @@
         android:layout_below="@+id/button2"
         android:onClick="choosePicture"
         android:text="Choose Picture" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/user"
+        android:onClick="userProfile" />
 
     <TextView
         android:id="@+id/text_freq"
@@ -111,7 +121,7 @@
         android:id="@+id/ins"
         android:layout_height="31dp"
         android:layout_width="74dp"
-        android:text="0"
+        android:text="Unknown"
         android:textSize="20sp"
         tools:layout_editor_absoluteY="464dp"
         tools:layout_editor_absoluteX="237dp"
