--- a/bluetooth/src/main/res/layout/activity_camera.xml
+++ b/bluetooth/src/main/res/layout/activity_camera.xml
@@ -11,42 +11,50 @@
         android:id="@+id/preview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/button4" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+        android:layout_above="@+id/button"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:onClick="takePicture"
-        android:text="Take Photo"
-        android:id="@+id/button" />
+        android:layout_marginBottom="20dp"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/button"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/button"
+        android:background="@drawable/button_color"
+        android:onClick="takePicture"
+        android:text="Take Photo" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="36dp"
+        android:layout_toStartOf="@+id/button3"
+        android:background="@drawable/button_color"
         android:onClick="openGallery"
-        android:text="Open Gallery"
-        android:id="@+id/button2" />
+        android:text="Open Gallery" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/button2"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="28dp"
+        android:layout_toStartOf="@+id/button4"
+        android:background="@drawable/button_color"
         android:onClick="upload"
         android:text="Upload" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
+        android:layout_width="70dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/button3"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/button_color"
         android:onClick="search"
         android:text="Search" />
 
