--- a/bluetooth/src/main/res/layout/activity_user_profile.xml
+++ b/bluetooth/src/main/res/layout/activity_user_profile.xml
@@ -56,18 +56,18 @@
         android:layout_alignBaseline="@+id/freq"
         android:layout_alignBottom="@+id/freq"
         android:layout_alignParentStart="true"
-        android:text="Frequency:"
+        android:text="Tuning:"
         android:textSize="20sp"
         tools:layout_editor_absoluteX="117dp"
         tools:layout_editor_absoluteY="464dp" />
 
     <TextView
         android:id="@+id/freq"
-        android:layout_width="74dp"
+        android:layout_width="150dp"
         android:layout_height="31dp"
         android:layout_below="@+id/name"
         android:layout_toEndOf="@+id/text_name"
-        android:text="0"
+        android:text="---"
         android:textSize="20sp"
         tools:layout_editor_absoluteX="237dp"
         tools:layout_editor_absoluteY="464dp" />
@@ -79,7 +79,7 @@
         android:layout_alignBaseline="@+id/name"
         android:layout_alignBottom="@+id/name"
         android:layout_alignParentStart="true"
-        android:text="Name:"
+        android:text="Bluetooth:"
         android:textSize="20sp"
         tools:layout_editor_absoluteX="117dp"
         tools:layout_editor_absoluteY="464dp" />
