--- a/bluetooth/src/main/res/layout/splash.xml
+++ b/bluetooth/src/main/res/layout/splash.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg"
+    android:background="@color/black"
     android:gravity="center">
 
     <ImageView
@@ -12,7 +12,6 @@
         android:background="@null"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="50dip"
         android:adjustViewBounds="false"
         android:focusable="false" />
 
