--- a/bluetooth/src/main/res/layout/fragment_tune_item_config.xml
+++ b/bluetooth/src/main/res/layout/fragment_tune_item_config.xml
@@ -15,6 +15,16 @@
         android:layout_height="2dp"
         android:background="@color/wl_blue"/>
     <Button
+        android:id="@+id/tune_item_apply"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="apply" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/wl_blue"/>
+    <Button
         android:id="@+id/tune_item_delete"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         android:layout_width="match_parent"
